--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rodrigo F. Pizzolato</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>This is just a Git test</h1>
